--- a/behavior/global_config.yaml
+++ b/behavior/global_config.yaml
@@ -3,3 +3,6 @@ demo_stats_path: data/demo_stats.json
 action_seq_result_path: evaluation/action_sequence/results
 goal_int_result_path: evaluation/goal_interpretation/results
 goal_int_resources_path: evaluation/goal_interpretation/resources
+subgoal_dec_result_path: evaluation/subgoal_decomposition/results
+subgoal_dec_resources_path: evaluation/subgoal_decomposition/resources
+subgoal_vocab_path: evaluation/subgoal_decomposition/resources/base_vocabulary.json
